manifest-sample/sample-deploy-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: deploied-from-github
spec:
  containers:
    - name: nginx-container
      image: nginx:1.16
