manifest-sample/sample-deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: deploied-from-github2
spec:
  containers:
    - name: nginx-container
      image: nginx:1.16
