manifest-sample/sample-statefulset-headless.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
        name: sample-statefulset-headless
spec:
        serviceName: sample-headless
        replicas: 3
        selector:
                matchLabels:
                        app: sample-app2
        template:
                metadata:
                        labels:
                                app: sample-app2
                spec:
                        containers:
                                - name: nginx-container
                                  image: nginx:1.16
