manifest-sample/test-autoscale.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  selector:
    matchLabels:
      app: nyan
  replicas: 3
  template:
    metadata:
      name: nyan
      labels:
        app: nyan
    spec:
      containers:
      - name: nyan
        image: busybox
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        args:
        - /bin/sh
        - -c
        - sleep 3600
