manifest-sample/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
spec:
  containers:
  - name: shell
    image: centos
    command:
    - /bin/sh
    - "-c"
    - "-"
    args:
    - "while :; do sleep 1000; done"
