manifest-sample/sample-externalname.yaml
apiVersion: v1
kind: Service
metadata:
        name: sample-externalname
        namespace: default
spec:
        type: ExternalName
        externalName: external.example.com
