manifest-sample/sample-headless.yaml
apiVersion: v1
kind: Service
metadata:
        name: sample-headless
spec:
        type: ClusterIP
        clusterIP: None
        ports:
                - name: "http-port"
                  protocol: "TCP"
                  port: 80
                  targetPort: 80
        selector:
                app: sample-app2
